Correction. CSS wrap in comment

--- a/src/components/comment/style.css
+++ b/src/components/comment/style.css
@@ -26,6 +26,8 @@
 
 .Comment-text {
   font-size: 14px;
+  overflow-wrap: break-word;
+  white-space: break-spaces;
 }
 
 .Comment-controls a {
